--- a/delivery/pages/celiacos.html
+++ b/delivery/pages/celiacos.html
@@ -120,37 +120,48 @@
 
     </div> <!-- End container -->
 </header> <!-- END HEADER-3 -->
+
+<div class="wppFixed">
+    <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png" alt=""></a>
+</div>
+
+
 <main>
 
-    <img class="imagenGrande" src="../../images/granero/lugar/delivery.jpg" alt="">
+    <div class="back">
+        <section id="UbicacionYhorarios" class="bg-fixed wide-100 about-section division bordes">
+            <div class="container centrado">
+                <div class="row">
 
-    <section id="UbicacionYhorarios" class="bg-fixed wide-100 about-section division bordes">
-        <div class="container ">
-            <div class="row">
 
+                    <!-- ABOUT TEXT -->
+                    <div class="col-lg-10 offset-lg-1 espacio cartelDelivery">
+                        <div class=" text-center">
 
-                <!-- ABOUT TEXT -->
-                <div class="col-lg-10 offset-lg-1 espacio">
-                    <div class=" text-center">
+                            <!-- Title -->
+                            <h2 class="h2-lg">Delivery</h2>
+                            <!-- Text -->
+                            <p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
+                            <p>-----------------------</p>
+                            <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
+                            <div class="container">
+                                <div class="estadoTienda " id="estadoTienda"></div>
+                                <div class="contadorTienda" id="contadorTienda"></div>
+                                <div class="horizontal">
+                                    <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img
+                                        class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png"
+                                            alt=""></a>
+                                    <p>249-4640289</p>
+                                </div>
 
-                        <!-- Title -->
-                        <h2 class="h2-lg">Horarios</h2>
-                        <!-- Text -->
-                        <p class="p-lg grey-color">Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM
-                        </p>
-                        <div class="container">
-                            <div class="estadoTienda " id="estadoTienda"></div>
-                            <div class="contadorTienda" id="contadorTienda"></div>
-                            <a href="https://www.google.com/maps/dir//Granero+66,+Av.+Don+Bosco+2340,+B7000+Tandil,+Provincia+de+Buenos+Aires/@-37.3695264,-59.1141707,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x95911f717748a34f:0x5fc6f216e0bd6b0d!2m2!1d-59.1115958!2d-37.3695307?hl=es&entry=ttu"
-                                target="_blank" class="btn btn-md btn-red tra-red-hover">Como llegar</a>
+                            </div>
                         </div>
-                    </div>
-                </div> <!-- END ABOUT TEXT -->
+                    </div> <!-- END ABOUT TEXT -->
 
-
+                </div>
             </div> <!-- End row -->
-        </div> <!-- End container -->
-    </section> <!-- END ABOUT-2 -->
+        </section> <!-- END ABOUT-2 -->
+    </div> <!-- End container -->
     <p class="white-color" id="menu">a</p>
     <section id="menu" class="menu2">
 
@@ -174,7 +185,7 @@
     <section>
         <div class="container">
 
-            <div class="cajaTitulo">
+            <div class="cajaTitulo espacio">
                 <h2>Hamburguesas (celiacas)</h2>
             </div>
 
@@ -183,6 +194,9 @@
                 <div class="boxMenu-2">
                     <h3>Bacon</h3>
                     <p>Con cheddar y panceta</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -201,6 +215,9 @@
                 <div class="boxMenu-2">
                     <h3>Classic</h3>
                     <p>Simple sin queso</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -219,6 +236,9 @@
                 <div class="boxMenu-2">
                     <h3>Blue</h3>
                     <p>Con queso azul, rúcula y panceta</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -237,6 +257,9 @@
                 <div class="boxMenu-2">
                     <h3>Completa</h3>
                     <p>Con jamón, queso, lechuga y tomate</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -259,6 +282,9 @@
                 <div class="boxMenu-2">
                     <h3>Cesar</h3>
                     <p>Con lechuga, queso provolone, pollo, croutons y salsa cesar</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -277,6 +303,9 @@
                 <div class="boxMenu-2">
                     <h3>Arizona</h3>
                     <p>Con lechuga, zanahoria, tomate y pollo</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -299,6 +328,9 @@
                 <div class="boxMenu-2">
                     <h3>Tostado</h3>
                     <p>Con jamón y queso</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -320,6 +352,9 @@
                 <img class="imagenMenu" src="../../images/granero/comidas/milanesas/ilinois.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Papas fritas</h3>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -338,6 +373,9 @@
                 <div class="boxMenu-2">
                     <h3>Papas Granero</h3>
                     <p>Con cheddar y panceta</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -360,6 +398,9 @@
                 <div class="boxMenu-2">
                     <h3>Alfajor negro o blanco</h3>
                     <p>Negro o blanco</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -377,6 +418,9 @@
                 <img class="imagenMenu" src="../../images/granero/comidas/picar/papas granero.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Alfajor de maicena</h3>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -394,6 +438,9 @@
                 <img class="imagenMenu" src="../../images/granero/comidas/picar/papas granero.webp" alt="">
                 <div class="boxMenu-2">
                     <h3>Brownie</h3>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -412,6 +459,9 @@
                 <div class="boxMenu-2">
                     <h3>Pastafrola</h3>
                     <p>De batata</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
