--- a/delivery/pages/sandwiches.html
+++ b/delivery/pages/sandwiches.html
@@ -120,37 +120,47 @@
 
     </div> <!-- End container -->
 </header> <!-- END HEADER-3 -->
+
+<div class="wppFixed">
+    <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png" alt=""></a>
+</div>
+
 <main>
 
-    <img class="imagenGrande" src="../../images/granero/lugar/delivery.jpg" alt="">
+    <div class="back">
+        <section id="UbicacionYhorarios" class="bg-fixed wide-100 about-section division bordes">
+            <div class="container centrado">
+                <div class="row">
 
-    <section id="UbicacionYhorarios" class="bg-fixed wide-100 about-section division bordes">
-        <div class="container ">
-            <div class="row">
 
+                    <!-- ABOUT TEXT -->
+                    <div class="col-lg-10 offset-lg-1 espacio cartelDelivery">
+                        <div class=" text-center">
 
-                <!-- ABOUT TEXT -->
-                <div class="col-lg-10 offset-lg-1 espacio">
-                    <div class=" text-center">
+                            <!-- Title -->
+                            <h2 class="h2-lg">Delivery</h2>
+                            <!-- Text -->
+                            <p class="p-lg grey-color">Miercoles y Jueves de 18PM a 00AM</p>
+                            <p>-----------------------</p>
+                            <p class="p-lg grey-color"> Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM</p>
+                            <div class="container">
+                                <div class="estadoTienda " id="estadoTienda"></div>
+                                <div class="contadorTienda" id="contadorTienda"></div>
+                                <div class="horizontal">
+                                    <a href="https://api.whatsapp.com/send?phone=5492494640289" target="_blank"><img
+                                            class="iconoWpp" src="../../images/granero/diseños/WhatsApp_icon.png"
+                                            alt=""></a>
+                                    <p>249-4640289</p>
+                                </div>
 
-                        <!-- Title -->
-                        <h2 class="h2-lg">Horarios</h2>
-                        <!-- Text -->
-                        <p class="p-lg grey-color">Viernes, Sábados, Domingos y feriados de 11:30AM a 00AM
-                        </p>
-                        <div class="container">
-                            <div class="estadoTienda " id="estadoTienda"></div>
-                            <div class="contadorTienda" id="contadorTienda"></div>
-                            <a href="https://www.google.com/maps/dir//Granero+66,+Av.+Don+Bosco+2340,+B7000+Tandil,+Provincia+de+Buenos+Aires/@-37.3695264,-59.1141707,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x95911f717748a34f:0x5fc6f216e0bd6b0d!2m2!1d-59.1115958!2d-37.3695307?hl=es&entry=ttu"
-                                target="_blank" class="btn btn-md btn-red tra-red-hover">Como llegar</a>
+                            </div>
                         </div>
-                    </div>
-                </div> <!-- END ABOUT TEXT -->
+                    </div> <!-- END ABOUT TEXT -->
 
-
+                </div>
             </div> <!-- End row -->
-        </div> <!-- End container -->
-    </section> <!-- END ABOUT-2 -->
+        </section> <!-- END ABOUT-2 -->
+    </div> <!-- End container -->
     <p class="white-color" id="menu">a</p>
 
     <section id="menu" class="menu2">
@@ -179,23 +189,16 @@
                 <div class="boxMenu-2">
                     <h3>Lomito simple</h3>
                     <p>Sandwich de lomito con pan casero</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
-                <div class="boxMenu-3-2">
+                <div class="boxMenu-3">
                     <p>Con cerveza </p>
                     <p>Con gaseosa </p>
                     <p>Solo </p>
                 </div>
-                <div class="boxMenu-4-2">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
-                </div>
-                <div class="boxMenu-3-2">
-                    <p>XL Con cerveza </p>
-                    <p>XL Con gaseosa </p>
-                    <p>XL Solo </p>
-                </div>
-                <div class="boxMenu-4-2">
+                <div class="boxMenu-4">
                     <p>$500 </p>
                     <p>$500 </p>
                     <p>$500 </p>
@@ -206,23 +209,16 @@
                 <div class="boxMenu-2">
                     <h3>Lomito completo</h3>
                     <p>Sandwich de lomito con jamón, queso, lechuga y tomate en pan casero</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
-                <div class="boxMenu-3-2">
+                <div class="boxMenu-3">
                     <p>Con cerveza </p>
                     <p>Con gaseosa </p>
                     <p>Solo </p>
                 </div>
-                <div class="boxMenu-4-2">
-                    <p>$500 </p>
-                    <p>$500 </p>
-                    <p>$500 </p>
-                </div>
-                <div class="boxMenu-3-2">
-                    <p>XL Con cerveza </p>
-                    <p>XL Con gaseosa </p>
-                    <p>XL Solo </p>
-                </div>
-                <div class="boxMenu-4-2">
+                <div class="boxMenu-4">
                     <p>$500 </p>
                     <p>$500 </p>
                     <p>$500 </p>
@@ -234,6 +230,9 @@
                 <div class="boxMenu-2">
                     <h3>Tostado</h3>
                     <p>Con jamón y queso</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
@@ -252,6 +251,9 @@
                 <div class="boxMenu-2">
                     <h3>jamón crudo y queso</h3>
                     <p>Sandwich de jamón crudo y queso tostado en pan casero</p>
+                    <div class="boxMenu-4-2">
+                        <p>$300</p>
+                    </div>
                 </div>
                 <div class="boxMenu-3">
                     <p>Con cerveza </p>
