--- a/delivery/index.html
+++ b/delivery/index.html
@@ -273,7 +273,7 @@
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/kansas.webp" alt="">
+                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/texas.webp" alt="">
                     <div class="boxMenu-2">
                         <h3>Texas</h3>
                         <p>Con queso de cheddar, lechuga, cebolla y salsa thousand island</p>
@@ -379,7 +379,7 @@
                 </div>
 
                 <div class="boxMenu">
-                    <img class="imagenMenu" src="../images/granero/comidas/hamburguesas/california.webp" alt="">
+                    <img class="imagenMenu" src="../images/granero/logos/minilogo.png" alt="">
                     <div class="boxMenu-2">
                         <h3>Santa Monica</h3>
                         <p>Hamburguesa de lentejas y verdeo con lechuga, tomate y cebolla</p>
