--- a/delivery/pages/bebidas.html
+++ b/delivery/pages/bebidas.html
@@ -189,7 +189,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/seligman.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Pepsi</h3>
                     <p>Comun o black (sin azucar)</p>
@@ -203,7 +203,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/misuri.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Seven up</h3>
                     <p>Comun o free (sin azucar)</p>
@@ -217,7 +217,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/kingman.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Mirinda</h3>
                     <p></p>
@@ -231,7 +231,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/historica.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Paso de los toros</h3>
                     <p>Tonica o pomelo</p>
@@ -245,7 +245,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/historica.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Saborizadas</h3>
                     <p>Pomelo, naranja o manzana</p>
@@ -259,7 +259,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/milanesas/historica.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Agua mineral</h3>
                     <p></p>
@@ -277,7 +277,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/ensaladas/cesar.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Andes</h3>
                     <p>Rubia, roja o negra</p>
@@ -291,7 +291,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/ensaladas/arizona.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Budweiser</h3>
                     <p></p>
