--- a/delivery/pages/paraPicar.html
+++ b/delivery/pages/paraPicar.html
@@ -268,7 +268,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/picar/papas granero.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Papas fritas</h3>
                     <p></p>
