--- a/delivery/pages/philys.html
+++ b/delivery/pages/philys.html
@@ -247,7 +247,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/phily/carne.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Phily vegetales</h3>
                     <p>Vegetales con queso provolone gratinado</p>
