--- a/delivery/pages/postres.html
+++ b/delivery/pages/postres.html
@@ -208,7 +208,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/cheese cake.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Tarta de frutilla</h3>
                     <p>Con crema, dulce de leche y frutillas</p>
@@ -265,7 +265,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/brownie frutilla.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Brownie kit kat y oreo</h3>
                     <p>Con crema, dulce de leche, barra Kit Kat y galletita oreo</p>
@@ -284,7 +284,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/brownie frutilla.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Lemon pie</h3>
                     <p>Cpn crema de limón y merengue</p>
@@ -303,7 +303,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/brownie frutilla.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Torta oreo</h3>
                     <p>Con crema, dulce de leche y merengue</p>
@@ -322,7 +322,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/brownie frutilla.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Rogel</h3>
                     <p>Con dulce de leche y merengue</p>
@@ -379,7 +379,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/waffle helado.png.jpg" alt="">
+                <img class="imagenMenu" src="../../images/granero/comidas/postres/waffle helado.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Waffle helado</h3>
                     <p>Con dos bochas de helado, crema, nutella y Kinder</p>
@@ -398,7 +398,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/waffle especial.jpg" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Banana split</h3>
                     <p>Con tres bochas de helado y crema</p>
@@ -417,7 +417,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/cabsha.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Chocooreo / chocotorta</h3>
                     <p></p>
@@ -468,7 +468,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Malteadas</h3>
                     <p>De dulce de leche, chocolate, frutilla o vainilla</p>
@@ -482,7 +482,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Chocolatada</h3>
                     <p></p>
@@ -496,7 +496,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Milkshake</h3>
                     <p>Nutella, oreo o brownie</p>
@@ -514,7 +514,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Negro</h3>
                     <p></p>
@@ -528,7 +528,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Cortado</h3>
                     <p></p>
@@ -542,7 +542,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Con leche </h3>
                     <p></p>
@@ -556,7 +556,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Lágrima</h3>
                     <p></p>
@@ -570,7 +570,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Capuccino</h3>
                     <p></p>
@@ -584,7 +584,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Latte</h3>
                     <p>Con chocolate blanco o caramel</p>
@@ -598,7 +598,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Yogurt</h3>
                     <p>Con granola y frutas</p>
@@ -612,7 +612,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Frappe</h3>
                     <p></p>
@@ -626,7 +626,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/postres/malteadas.png" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Té</h3>
                     <p></p>
