--- a/delivery/pages/sandwiches.html
+++ b/delivery/pages/sandwiches.html
@@ -226,7 +226,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/phily/albondigas.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>Tostado</h3>
                     <p>Con jamón y queso</p>
@@ -247,7 +247,7 @@
             </div>
 
             <div class="boxMenu">
-                <img class="imagenMenu" src="../../images/granero/comidas/phily/carne.webp" alt="">
+                <img class="imagenMenu" src="../../images/granero/logos/minilogo.png" alt="">
                 <div class="boxMenu-2">
                     <h3>jamón crudo y queso</h3>
                     <p>Sandwich de jamón crudo y queso tostado en pan casero</p>
